Add docker commands.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js",
     "image": "docker image build -t request-server-image .",
-    "container": "docker container run -d --name request-server -p 4080:4080 request-server-image"
+    "container": "docker container run -d --name request-server -p 4080:4080 request-server-image",
+    "rm": "docker container rm request-server",
+    "mv": "docker container cp ./ request-server:/app",
+    "logs": "docker logs --tail 100 request-server"
   },
   "keywords": [],
   "author": "Filipp Zhuravlev <shiningfinger@list.ru>",
