--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
   "author": "Filipp Zhuravlev <shiningfinger@list.ru>",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.18.1",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "morgan": "^1.9.1",
-    "nodemon": "^1.18.9"
+    "nodemon": "^1.18.9",
+    "requets": "0.0.1-security"
   }
 }
