--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Filipp Zhuravlev <shiningfinger@list.ru>",
   "license": "ISC",
   "dependencies": {
+    "@github/details-dialog-element": "^3.1.2",
     "axios": "^0.18.1",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
